# mangak-downloader

./: README.md  pyproject.toml
src/mangak/: __init__.py  __main__.py
src/mangak/cli/: __init__.py  app.py  display.py  interactive.py
src/mangak/cli/commands/: __init__.py  download.py  history.py  info.py  search.py  settings.py
src/mangak/core/: __init__.py  client.py  config.py  db.py  downloader.py  exceptions.py  export.py  models.py  themes.py
src/mangak/gui/: __init__.py  app.py  themes.py
src/mangak/gui/resources/: __init__.py  dark.json  dark.qss
src/mangak/gui/tabs/: __init__.py  download.py  history.py  manga_name.py  manga_url.py  settings.py
src/mangak/gui/widgets/: __init__.py  glass_panel.py  manga_card.py  progress_ring.py  toast.py
tests/: conftest.py  test_client.py  test_downloader.py  test_export.py  test_models.py
